--- a/app/src/main/res/layout/repo_item.xml
+++ b/app/src/main/res/layout/repo_item.xml
@@ -2,23 +2,30 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/repoItem"
+    android:layout_margin="8dp"
     android:layout_width="200dp"
     android:layout_height="100dp"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/repoTag"
-        android:layout_width="200dp"
-        android:layout_height="80dp"
-        android:scaleType="centerCrop" />
-
 
     <TextView
         android:id="@+id/repoName"
+
+        style="@style/TextAppearance.AppCompat.SearchResult.Title"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center_vertical|center_horizontal"
+        android:textStyle="bold"
+        tools:text="BAM LAb" />
+
+    <TextView
+        android:id="@+id/repoLang"
         style="@style/TextAppearance.AppCompat.Body1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center_vertical|center_horizontal"
         android:textStyle="bold"
         tools:text="BAM LAb" />
 
